--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>www.My-Portfolio.com</span>
+                      <strong>Website:</strong> <span>joel-bukoma-portifolio.vercel.app</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
