--- a/index.html
+++ b/index.html
@@ -83,31 +83,6 @@
               ><i class="bi bi-hdd-stack navicon"></i> Services</a
             >
           </li>
-          <li class="dropdown">
-            <a href="#"
-              ><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span>
-              <i class="bi bi-chevron-down toggle-dropdown"></i
-            ></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown">
-                <a href="#"
-                  ><span>Deep Dropdown</span>
-                  <i class="bi bi-chevron-down toggle-dropdown"></i
-                ></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
           <li>
             <a href="#contact"
               ><i class="bi bi-envelope navicon"></i> Contact</a
@@ -129,7 +104,7 @@
             <span
               class="typed"
               data-typed-items="Designer, Developer, Freelancer, Photographer"
-              >Designer</span
+              >Web Designer</span
             ><span
               class="typed-cursor typed-cursor--blink"
               aria-hidden="true"
@@ -183,7 +158,7 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Phone:</strong> <span>+256 705-820-835</span>
+                      <strong>Phone:</strong> <span>+256 705-820-825</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -441,7 +416,7 @@
                 </p>
                 <ul>
                   <li>Kampala, Ug</li>
-                  <li>(+256) 705-820-835</li>
+                  <li>(+256) 705-820-825</li>
                   <li>bukomajoel1@gmail.com</li>
                 </ul>
               </div>
@@ -1084,6 +1059,7 @@
                   />
                   <h3>JOHN BAPTIST MUKE</h3>
                   <h4>Ceo &amp; Founder</h4>
+                  <h4>DesisHub Technologies Ltd</h4>
                 </div>
               </div>
               <!-- End testimonial item -->
@@ -1142,6 +1118,7 @@
                   />
                   <h3>Mr. Iroid</h3>
                   <h4>Director</h4>
+                  <h4>DesisHub Technologies Ltd</h4>
                 </div>
               </div>
 
