--- a/index.html
+++ b/index.html
@@ -1277,6 +1277,7 @@
           </p>
         </div>
     </footer>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <a
       href="#"
