--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
               </div>
               <div>
                 <h4 class="title">
-                  <a href="service-details.html" class="stretched-link"
+                  <a href="#" class="stretched-link"
                     >E-Commerce Development</a
                   >
                 </h4>
@@ -508,7 +508,7 @@
               </div>
               <div>
                 <h4 class="title">
-                  <a href="service-details.html" class="stretched-link"
+                  <a href="#" class="stretched-link"
                     >Systems Design</a
                   >
                 </h4>
@@ -528,7 +528,7 @@
               </div>
               <div>
                 <h4 class="title">
-                  <a href="service-details.html" class="stretched-link"
+                  <a href="#" class="stretched-link"
                     >Graphic Design</a
                   >
                 </h4>
@@ -548,7 +548,7 @@
               </div>
               <div>
                 <h4 class="title">
-                  <a href="service-details.html" class="stretched-link"
+                  <a href="#" class="stretched-link"
                     >UI/UX Design</a
                   >
                 </h4>
@@ -568,7 +568,7 @@
               </div>
               <div>
                 <h4 class="title">
-                  <a href="service-details.html" class="stretched-link"
+                  <a href="#" class="stretched-link"
                     >App Development</a
                   >
                 </h4>
@@ -588,7 +588,7 @@
               </div>
               <div>
                 <h4 class="title">
-                  <a href="service-details.html" class="stretched-link"
+                  <a href="#" class="stretched-link"
                     >Web Development</a
                   >
                 </h4>
