--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <a href="https://twitter.com/BukomaJoel" class="twitter"><i class="bi bi-twitter-x"></i></a>
         <a href="https://www.facebook.com/Joel Walker" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/joel_walker.s/" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/joel-bukoma" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/Bukoma Joel" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.tiktok.com/@joelwalker.ug" class="TikTok"><i class="bi bi-TikTok"></i></a>
       </div>
 
       <nav id="navmenu" class="navmenu">
@@ -110,7 +111,6 @@
             ></span>
           </p>
         </div>
-          <button><a href=" https://desishub.com"> Visit DesisHub</a></button>
       </section>
       
       <!-- /Hero Section -->
