--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       </a>
 
       <div class="social-links text-center">
+        <a href="https://wa.me/+256705820825" class="whatsapp"><i class="bi bi-WhatsApp"></i></a>
         <a href="https://twitter.com/BukomaJoel" class="twitter"><i class="bi bi-twitter-x"></i></a>
         <a href="https://www.facebook.com/Joel Walker" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/joel_walker.s/" class="instagram"><i class="bi bi-instagram"></i></a>
@@ -99,7 +100,7 @@
             I'm
             <span
               class="typed"
-              data-typed-items="Designer, Developer, Freelancer, Photographer"
+              data-typed-items="Designer, Developer"
               >Web Developer</span
             ><span
               class="typed-cursor typed-cursor--blink"
