--- a/index.html
+++ b/index.html
@@ -470,137 +470,116 @@
       <!-- /Resume Section -->
  
       <section id="services" class="services section">
-        <div class="container section-title" data-aos="fade-up">
-          <h2>Services</h2>
-          <p>
-            A comprehensive range of services to meet your digital needs.
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Services</h2>
+    <p>
+      A comprehensive range of services to meet your digital needs.
+    </p>
+  </div>
+
+  <div class="container">
+    <div class="row gy-4">
+
+      <!-- Service 1 -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-briefcase"></i>
+        </div>
+        <div>
+          <h4 class="title">
+            <a href="#" class="stretched-link">E-Commerce Development</a>
+          </h4>
+          <p class="description">
+            Creating user-friendly online stores to enhance your business.
           </p>
+          <span class="price">Starting at $500</span>
         </div>
+      </div>
 
-        <div class="container">
-          <div class="row gy-4">
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-briefcase"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >E-Commerce Development</a
-                  >
-                </h4>
-                <p class="description">
-                  Creating user-friendly online stores to enhance your business.
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-card-checklist"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >Systems Design</a
-                  >
-                </h4>
-                <p class="description">
-                  Analyzing user requirements and designing effective systems to meet those needs.
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="300"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-bar-chart"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >Graphic Design</a
-                  >
-                </h4>
-                <p class="description">
-                  Creating visually stunning designs that effectively communicate your brand message.
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="400"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-binoculars"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >UI/UX Design</a
-                  >
-                </h4>
-                <p class="description">
-                  Designing user-friendly interfaces that enhance user experience.
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="500"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-brightness-high"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >App Development</a
-                  >
-                </h4>
-                <p class="description">
-                  Creating user-friendly mobile applications to enhance user engagement.
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="600"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-calendar4-week"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >Web Development</a
-                  >
-                </h4>
-                <p class="description">
-                  Creating responsive and modern websites to enhance your online presence.
-                </p>
-              </div>
-            </div>
-          </div>
+      <!-- Service 2 -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-card-checklist"></i>
         </div>
-      </section>
+        <div>
+          <h4 class="title">
+            <a href="#" class="stretched-link">Systems Design</a>
+          </h4>
+          <p class="description">
+            Analyzing user requirements and designing effective systems to meet those needs.
+          </p>
+          <span class="price">Starting at $400</span>
+        </div>
+      </div>
+
+      <!-- Service 3 -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-bar-chart"></i>
+        </div>
+        <div>
+          <h4 class="title">
+            <a href="#" class="stretched-link">Graphic Design</a>
+          </h4>
+          <p class="description">
+            Creating visually stunning designs that effectively communicate your brand message.
+          </p>
+          <span class="price">Starting at $150</span>
+        </div>
+      </div>
+
+      <!-- Service 4 -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-binoculars"></i>
+        </div>
+        <div>
+          <h4 class="title">
+            <a href="#" class="stretched-link">UI/UX Design</a>
+          </h4>
+          <p class="description">
+            Designing user-friendly interfaces that enhance user experience.
+          </p>
+          <span class="price">Starting at $300</span>
+        </div>
+      </div>
+
+      <!-- Service 5 -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-brightness-high"></i>
+        </div>
+        <div>
+          <h4 class="title">
+            <a href="#" class="stretched-link">App Development</a>
+          </h4>
+          <p class="description">
+            Creating user-friendly mobile applications to enhance user engagement.
+          </p>
+          <span class="price">Starting at $600</span>
+        </div>
+      </div>
+
+      <!-- Service 6 -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-calendar4-week"></i>
+        </div>
+        <div>
+          <h4 class="title">
+            <a href="#" class="stretched-link">Web Development</a>
+          </h4>
+          <p class="description">
+            Creating responsive and modern websites to enhance your online presence.
+          </p>
+          <span class="price">Starting at $450</span>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
       <section id="testimonials" class="testimonials section light-background">
         <div class="container section-title" data-aos="fade-up">
