--- a/index.html
+++ b/index.html
@@ -492,7 +492,8 @@
           <p class="description">
             Creating user-friendly online stores to enhance your business.
           </p>
-          <span class="price">Starting at $500</span>
+          <span class="price">Starting at $1000</span>
+          <a href="#contact" class="btn-quote">Get Quote</a>
         </div>
       </div>
 
@@ -508,7 +509,8 @@
           <p class="description">
             Analyzing user requirements and designing effective systems to meet those needs.
           </p>
-          <span class="price">Starting at $400</span>
+          <span class="price">Starting at $1500</span>
+          <a href="#contact" class="btn-quote">Get Quote</a>
         </div>
       </div>
 
@@ -525,6 +527,7 @@
             Creating visually stunning designs that effectively communicate your brand message.
           </p>
           <span class="price">Starting at $150</span>
+          <a href="#contact" class="btn-quote">Get Quote</a>
         </div>
       </div>
 
@@ -541,6 +544,7 @@
             Designing user-friendly interfaces that enhance user experience.
           </p>
           <span class="price">Starting at $300</span>
+          <a href="#contact" class="btn-quote">Get Quote</a>
         </div>
       </div>
 
@@ -556,7 +560,8 @@
           <p class="description">
             Creating user-friendly mobile applications to enhance user engagement.
           </p>
-          <span class="price">Starting at $600</span>
+          <span class="price">Starting at $1200</span>
+          <a href="#contact" class="btn-quote">Get Quote</a>
         </div>
       </div>
 
@@ -572,7 +577,8 @@
           <p class="description">
             Creating responsive and modern websites to enhance your online presence.
           </p>
-          <span class="price">Starting at $450</span>
+          <span class="price">Starting at $750</span>
+          <a href="#contact" class="btn-quote">Get Quote</a>
         </div>
       </div>
 
