--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/services.css">
 
     <link
       href="vendor/bootstrap/css/bootstrap.min.css"
@@ -470,137 +471,86 @@
       <!-- /Resume Section -->
  
       <section id="services" class="services section">
-        <div class="container section-title" data-aos="fade-up">
-          <h2>Services</h2>
-          <p>
-            A comprehensive range of services to meet your digital needs.
-          </p>
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Services</h2>
+    <p>
+      A comprehensive range of services to meet your digital needs.
+    </p>
+  </div>
+
+  <div class="container">
+    <div class="row gy-4">
+
+      <!-- E-Commerce (blurred by default) -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-briefcase"></i>
         </div>
-
-        <div class="container">
-          <div class="row gy-4">
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-briefcase"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >E-Commerce Development</a
-                  >
-                </h4>
-                <p class="description">
-                  Creating user-friendly online stores to enhance your business.
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-card-checklist"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >Systems Design</a
-                  >
-                </h4>
-                <p class="description">
-                  Analyzing user requirements and designing effective systems to meet those needs.
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="300"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-bar-chart"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >Graphic Design</a
-                  >
-                </h4>
-                <p class="description">
-                  Creating visually stunning designs that effectively communicate your brand message.
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="400"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-binoculars"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >UI/UX Design</a
-                  >
-                </h4>
-                <p class="description">
-                  Designing user-friendly interfaces that enhance user experience.
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="500"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-brightness-high"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >App Development</a
-                  >
-                </h4>
-                <p class="description">
-                  Creating user-friendly mobile applications to enhance user engagement.
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up"
-              data-aos-delay="600"
-            >
-              <div class="icon flex-shrink-0">
-                <i class="bi bi-calendar4-week"></i>
-              </div>
-              <div>
-                <h4 class="title">
-                  <a href="#" class="stretched-link"
-                    >Web Development</a
-                  >
-                </h4>
-                <p class="description">
-                  Creating responsive and modern websites to enhance your online presence.
-                </p>
-              </div>
-            </div>
-          </div>
+        <div>
+          <h4 class="title"><a href="#" class="stretched-link">E-Commerce Development</a></h4>
+          <p class="description">Creating user-friendly online stores to enhance your business.</p>
         </div>
+      </div>
+
+      <!-- Systems Design (blurred by default) -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-card-checklist"></i>
+        </div>
+        <div>
+          <h4 class="title"><a href="#" class="stretched-link">Systems Design</a></h4>
+          <p class="description">Analyzing user requirements and designing effective systems to meet those needs.</p>
+        </div>
+      </div>
+
+      <!-- Graphic Design (AVAILABLE) -->
+      <div class="col-lg-4 col-md-6 service-item d-flex available" data-aos="fade-up" data-aos-delay="300">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-bar-chart"></i>
+        </div>
+        <div>
+          <h4 class="title"><a href="#" class="stretched-link">Graphic Design</a></h4>
+          <p class="description">Creating visually stunning designs that effectively communicate your brand message.</p>
+        </div>
+      </div>
+
+      <!-- UI/UX (blurred by default) -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-binoculars"></i>
+        </div>
+        <div>
+          <h4 class="title"><a href="#" class="stretched-link">UI/UX Design</a></h4>
+          <p class="description">Designing user-friendly interfaces that enhance user experience.</p>
+        </div>
+      </div>
+
+      <!-- App Development (blurred by default) -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-brightness-high"></i>
+        </div>
+        <div>
+          <h4 class="title"><a href="#" class="stretched-link">App Development</a></h4>
+          <p class="description">Creating user-friendly mobile applications to enhance user engagement.</p>
+        </div>
+      </div>
+
+      <!-- Web Development (AVAILABLE) -->
+      <div class="col-lg-4 col-md-6 service-item d-flex available" data-aos="fade-up" data-aos-delay="600">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-calendar4-week"></i>
+        </div>
+        <div>
+          <h4 class="title"><a href="#" class="stretched-link">Web Development</a></h4>
+          <p class="description">Creating responsive and modern websites to enhance your online presence.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
       </section>
+
 
       <section id="testimonials" class="testimonials section light-background">
         <div class="container section-title" data-aos="fade-up">
