--- a/index.html
+++ b/index.html
@@ -469,122 +469,85 @@
       </section>
       <!-- /Resume Section -->
  
-      <section id="services" class="services section">
+<section id="services" class="services section">
   <div class="container section-title" data-aos="fade-up">
     <h2>Services</h2>
-    <p>
-      A comprehensive range of services to meet your digital needs.
-    </p>
+    <p>A comprehensive range of services to meet your digital needs.</p>
   </div>
 
   <div class="container">
     <div class="row gy-4">
 
-      <!-- Service 1 -->
+      <!-- E-Commerce (blurred) -->
       <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
         <div class="icon flex-shrink-0">
           <i class="bi bi-briefcase"></i>
         </div>
         <div>
-          <h4 class="title">
-            <a href="#" class="stretched-link">E-Commerce Development</a>
-          </h4>
-          <p class="description">
-            Creating user-friendly online stores to enhance your business.
-          </p>
-          <span class="price">Starting at $1000</span>
-          <a href="#contact" class="btn-quote">Get Quote</a>
+          <h4 class="title"><a href="#">E-Commerce Development</a></h4>
+          <p class="description">Creating user-friendly online stores to enhance your business.</p>
         </div>
       </div>
 
-      <!-- Service 2 -->
+      <!-- Systems Design (blurred) -->
       <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
         <div class="icon flex-shrink-0">
           <i class="bi bi-card-checklist"></i>
         </div>
         <div>
-          <h4 class="title">
-            <a href="#" class="stretched-link">Systems Design</a>
-          </h4>
-          <p class="description">
-            Analyzing user requirements and designing effective systems to meet those needs.
-          </p>
-          <span class="price">Starting at $1500</span>
-          <a href="#contact" class="btn-quote">Get Quote</a>
+          <h4 class="title"><a href="#">Systems Design</a></h4>
+          <p class="description">Analyzing user requirements and designing effective systems to meet those needs.</p>
         </div>
       </div>
 
-      <!-- Service 3 -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
+      <!-- Graphic Design (AVAILABLE) -->
+      <div class="col-lg-4 col-md-6 service-item d-flex available" data-aos="fade-up" data-aos-delay="300">
         <div class="icon flex-shrink-0">
           <i class="bi bi-bar-chart"></i>
         </div>
         <div>
-          <h4 class="title">
-            <a href="#" class="stretched-link">Graphic Design</a>
-          </h4>
-          <p class="description">
-            Creating visually stunning designs that effectively communicate your brand message.
-          </p>
-          <span class="price">Starting at $150</span>
-          <a href="#contact" class="btn-quote">Get Quote</a>
+          <h4 class="title"><a href="#">Graphic Design</a></h4>
+          <p class="description">Creating visually stunning designs that effectively communicate your brand message.</p>
         </div>
       </div>
 
-      <!-- Service 4 -->
+      <!-- UI/UX (blurred) -->
       <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
         <div class="icon flex-shrink-0">
           <i class="bi bi-binoculars"></i>
         </div>
         <div>
-          <h4 class="title">
-            <a href="#" class="stretched-link">UI/UX Design</a>
-          </h4>
-          <p class="description">
-            Designing user-friendly interfaces that enhance user experience.
-          </p>
-          <span class="price">Starting at $300</span>
-          <a href="#contact" class="btn-quote">Get Quote</a>
+          <h4 class="title"><a href="#">UI/UX Design</a></h4>
+          <p class="description">Designing user-friendly interfaces that enhance user experience.</p>
         </div>
       </div>
 
-      <!-- Service 5 -->
+      <!-- App Development (blurred) -->
       <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
         <div class="icon flex-shrink-0">
           <i class="bi bi-brightness-high"></i>
         </div>
         <div>
-          <h4 class="title">
-            <a href="#" class="stretched-link">App Development</a>
-          </h4>
-          <p class="description">
-            Creating user-friendly mobile applications to enhance user engagement.
-          </p>
-          <span class="price">Starting at $1200</span>
-          <a href="#contact" class="btn-quote">Get Quote</a>
+          <h4 class="title"><a href="#">App Development</a></h4>
+          <p class="description">Creating user-friendly mobile applications to enhance user engagement.</p>
         </div>
       </div>
 
-      <!-- Service 6 -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
+      <!-- Web Development (AVAILABLE) -->
+      <div class="col-lg-4 col-md-6 service-item d-flex available" data-aos="fade-up" data-aos-delay="600">
         <div class="icon flex-shrink-0">
           <i class="bi bi-calendar4-week"></i>
         </div>
         <div>
-          <h4 class="title">
-            <a href="#" class="stretched-link">Web Development</a>
-          </h4>
-          <p class="description">
-            Creating responsive and modern websites to enhance your online presence.
-          </p>
-          <span class="price">Starting at $750</span>
-          <a href="#contact" class="btn-quote">Get Quote</a>
+          <h4 class="title"><a href="#">Web Development</a></h4>
+          <p class="description">Creating responsive and modern websites to enhance your online presence.</p>
         </div>
       </div>
 
     </div>
   </div>
 </section>
+
 
 
       <section id="testimonials" class="testimonials section light-background">
