--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/services.css">
 
     <link
       href="vendor/bootstrap/css/bootstrap.min.css"
@@ -220,7 +219,7 @@
                 <i class="bi bi-journal-richtext"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="521"
+                  data-purecounter-end="21"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
@@ -237,7 +236,7 @@
                 <i class="bi bi-headset"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="1453"
+                  data-purecounter-end="24"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
@@ -276,7 +275,7 @@
         <div class="container section-title" data-aos="fade-up">
           <h2>Skills</h2>
           <p>
-            My technical skills include a strong proficiency in HTML, CSS, and JavaScript, as well as experience with PHP and WordPress.
+            My technical skills include a strong proficiency in HTML, CSS, and JavaScript,Photoshop.
           </p>
         </div>
         <!-- End Section Title -->
@@ -318,47 +317,13 @@
 
               <div class="progress">
                 <span class="skill"
-                  ><span>JavaScript</span> <i class="val">75%</i></span
+                  ><span>JavaScript</span> <i class="val">65%</i></span
                 >
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
                     aria-valuenow="75"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-              <!-- End Skills Item -->
-            </div>
-
-            <div class="col-lg-6">
-              <div class="progress">
-                <span class="skill"
-                  ><span>PHP</span> <i class="val">80%</i></span
-                >
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="80"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-              <!-- End Skills Item -->
-
-              <div class="progress">
-                <span class="skill"
-                  ><span>WordPress/CMS</span> <i class="val">90%</i></span
-                >
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="90"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -407,8 +372,7 @@
                 <h4>Joel Bukoma</h4>
                 <p>
                   <em
-                    >Innovative and deadline-driven Graphic Designer with 3+
-                    years of experience designing and developing user-centered
+                    >Innovative and deadline-driven Web developer and Graphic Designer with experience designing and developing user-centered
                     digital/print marketing material from initial concept to
                     final, polished deliverable.</em
                   >
@@ -441,7 +405,7 @@
             </div>
 
               <div class="resume-item">
-                <h4>Graphic design specialist</h4>
+                <h4>Graphic Designer</h4>
                 <h5>2023 - 2024</h5>
                 <p><em>JB DESIGNS UG, Kampala, UGANDA</em></p>
                 <ul>
@@ -471,86 +435,79 @@
       <!-- /Resume Section -->
  
       <section id="services" class="services section">
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Services</h2>
-    <p>
-      A comprehensive range of services to meet your digital needs.
-    </p>
-  </div>
+        <div class="container section-title" data-aos="fade-up">
+          <h2>Services</h2>
+          <p>
+            A comprehensive range of services to meet your digital needs.
+          </p>
+        </div>
 
-  <div class="container">
-    <div class="row gy-4">
+        <div class="container">
+          <div class="row gy-4">
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="icon flex-shrink-0">
+                <i class="bi bi-briefcase"></i>
+              </div>
+              <div>
+                <h4 class="title">
+                  <a href="#" class="stretched-link"
+                    >E-Commerce Development</a
+                  >
+                </h4>
+                <p class="description">
+                  Creating user-friendly online stores to enhance your business.
+                </p>
+              </div>
+            </div>
 
-      <!-- E-Commerce (blurred by default) -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-        <div class="icon flex-shrink-0">
-          <i class="bi bi-briefcase"></i>
-        </div>
-        <div>
-          <h4 class="title"><a href="#" class="stretched-link">E-Commerce Development</a></h4>
-          <p class="description">Creating user-friendly online stores to enhance your business.</p>
-        </div>
-      </div>
 
-      <!-- Systems Design (blurred by default) -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-        <div class="icon flex-shrink-0">
-          <i class="bi bi-card-checklist"></i>
-        </div>
-        <div>
-          <h4 class="title"><a href="#" class="stretched-link">Systems Design</a></h4>
-          <p class="description">Analyzing user requirements and designing effective systems to meet those needs.</p>
-        </div>
-      </div>
 
-      <!-- Graphic Design (AVAILABLE) -->
-      <div class="col-lg-4 col-md-6 service-item d-flex available" data-aos="fade-up" data-aos-delay="300">
-        <div class="icon flex-shrink-0">
-          <i class="bi bi-bar-chart"></i>
-        </div>
-        <div>
-          <h4 class="title"><a href="#" class="stretched-link">Graphic Design</a></h4>
-          <p class="description">Creating visually stunning designs that effectively communicate your brand message.</p>
-        </div>
-      </div>
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <div class="icon flex-shrink-0">
+                <i class="bi bi-bar-chart"></i>
+              </div>
+              <div>
+                <h4 class="title">
+                  <a href="#" class="stretched-link"
+                    >Graphic Design</a
+                  >
+                </h4>
+                <p class="description">
+                  Creating visually stunning designs that effectively communicate your brand message.
+                </p>
+              </div>
+            </div>
 
-      <!-- UI/UX (blurred by default) -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-        <div class="icon flex-shrink-0">
-          <i class="bi bi-binoculars"></i>
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex"
+              data-aos="fade-up"
+              data-aos-delay="600"
+            >
+              <div class="icon flex-shrink-0">
+                <i class="bi bi-calendar4-week"></i>
+              </div>
+              <div>
+                <h4 class="title">
+                  <a href="#" class="stretched-link"
+                    >Web Development</a
+                  >
+                </h4>
+                <p class="description">
+                  Creating responsive and modern websites to enhance your online presence.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div>
-          <h4 class="title"><a href="#" class="stretched-link">UI/UX Design</a></h4>
-          <p class="description">Designing user-friendly interfaces that enhance user experience.</p>
-        </div>
-      </div>
-
-      <!-- App Development (blurred by default) -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-        <div class="icon flex-shrink-0">
-          <i class="bi bi-brightness-high"></i>
-        </div>
-        <div>
-          <h4 class="title"><a href="#" class="stretched-link">App Development</a></h4>
-          <p class="description">Creating user-friendly mobile applications to enhance user engagement.</p>
-        </div>
-      </div>
-
-      <!-- Web Development (AVAILABLE) -->
-      <div class="col-lg-4 col-md-6 service-item d-flex available" data-aos="fade-up" data-aos-delay="600">
-        <div class="icon flex-shrink-0">
-          <i class="bi bi-calendar4-week"></i>
-        </div>
-        <div>
-          <h4 class="title"><a href="#" class="stretched-link">Web Development</a></h4>
-          <p class="description">Creating responsive and modern websites to enhance your online presence.</p>
-        </div>
-      </div>
-
-    </div>
-  </div>
       </section>
-
 
       <section id="testimonials" class="testimonials section light-background">
         <div class="container section-title" data-aos="fade-up">
@@ -665,7 +622,6 @@
                   <h3>Mr. Iroid</h3>
                   <h4>Manager</h4>
                   <h4>DesisHub Technologies Ltd</h4>
-                  <button><a href=" https://desishub.com"> Visit DesisHub</a></button>
                 </div>
               </div>
 
