--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
         <div>
           <h4 class="title"><a href="#">Web Development</a></h4>
           <p class="description">Creating responsive and modern websites to enhance your online presence.</p>
-          <button class="service-btn">Contact Us</button>
+          <button id="contact"class="service-btn">Contact Us</button>
         </div>
       </div>
 
