--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
         </div>
       </section>
       <!-- /Resume Section -->
- 
-<section id="services" class="services section">
+      <!--/service Section-->
+      <section id="services" class="services section">
   <div class="container section-title" data-aos="fade-up">
     <h2>Services</h2>
     <p>A comprehensive range of services to meet your digital needs.</p>
@@ -451,7 +451,7 @@
         <div>
           <h4 class="title"><a href="#">E-Commerce Development</a></h4>
           <p class="description">Creating user-friendly online stores to enhance your business.</p>
-          <button class="service-btn">Contact Us</button>
+          <button id="contact" class="service-btn">Contact Us</button>
         </div>
       </div>
 
@@ -463,7 +463,7 @@
         <div>
           <h4 class="title"><a href="#">Graphic Design</a></h4>
           <p class="description">Creating visually stunning designs that effectively communicate your brand message.</p>
-          <button class="service-btn">Contact Us</button>
+          <button id="contact" class="service-btn">Contact Us</button>
         </div>
       </div>
 
@@ -475,7 +475,7 @@
         <div>
           <h4 class="title"><a href="#">UI/UX Design</a></h4>
           <p class="description">Designing user-friendly interfaces that enhance user experience.</p>
-          <button class="service-btn">Contact Us</button>
+          <button id="contact" class="service-btn">Contact Us</button>
         </div>
       </div>
 
@@ -487,7 +487,7 @@
         <div>
           <h4 class="title"><a href="#">Web App Development</a></h4>
           <p class="description">Creating user-friendly mobile applications to enhance user engagement.</p>
-          <button class="service-btn">Contact Us</button>
+          <button id="contact" class="service-btn">Contact Us</button>
         </div>
       </div>
 
@@ -499,7 +499,7 @@
         <div>
           <h4 class="title"><a href="#">Web Development</a></h4>
           <p class="description">Creating responsive and modern websites to enhance your online presence.</p>
-          <button id="contact"class="service-btn">Contact Us</button>
+          <button id="contact" class="service-btn">Contact Us</button>
         </div>
       </div>
 
@@ -507,8 +507,7 @@
   </div>
 </section>
 
-
-
+      <!--/service Section-->
 
       <section id="testimonials" class="testimonials section light-background">
         <div class="container section-title" data-aos="fade-up">
