--- a/index.html
+++ b/index.html
@@ -449,9 +449,9 @@
           <i class="bi bi-briefcase"></i>
         </div>
         <div>
-          <h4 class="title"><a href="#">E-Commerce Development</a></h4>
+          <h4 class="title"><a href="#services">E-Commerce Development</a></h4>
           <p class="description">Creating user-friendly online stores to enhance your business.</p>
-          <button  class="service-btn">Contact Us</button>
+          <a href="#contact" class="service-btn">Contact Us</a>
         </div>
       </div>
 
@@ -461,9 +461,9 @@
           <i class="bi bi-bar-chart"></i>
         </div>
         <div>
-          <h4 class="title"><a href="#">Graphic Design</a></h4>
+          <h4 class="title"><a href="services">Graphic Design</a></h4>
           <p class="description">Creating visually stunning designs that effectively communicate your brand message.</p>
-          <button  class="service-btn">Contact Us</button>
+          <a href="#contact" class="service-btn">Contact Us</a>
         </div>
       </div>
 
@@ -473,9 +473,9 @@
           <i class="bi bi-binoculars"></i>
         </div>
         <div>
-          <h4 class="title"><a href="#">UI/UX Design</a></h4>
+          <h4 class="title"><a href="#services">UI/UX Design</a></h4>
           <p class="description">Designing user-friendly interfaces that enhance user experience.</p>
-          <button  class="service-btn">Contact Us</button>
+          <a href="#contact" class="service-btn">Contact Us</a>
         </div>
       </div>
 
@@ -485,9 +485,9 @@
           <i class="bi bi-brightness-high"></i>
         </div>
         <div>
-          <h4 class="title"><a href="#">Web App Development</a></h4>
+          <h4 class="title"><a href="#services">Web App Development</a></h4>
           <p class="description">Creating user-friendly mobile applications to enhance user engagement.</p>
-          <button  class="service-btn">Contact Us</button>
+          <a href="#contact" class="service-btn">Contact Us</a>
         </div>
       </div>
 
@@ -497,9 +497,9 @@
           <i class="bi bi-calendar4-week"></i>
         </div>
         <div>
-          <h4 class="title"><a href="#">Web Development</a></h4>
+          <h4 class="title"><a href="#services">Web Development</a></h4>
           <p class="description">Creating responsive and modern websites to enhance your online presence.</p>
-          <button  class="service-btn">Contact Us</button>
+          <a href="#contact" class="service-btn">Contact Us</a>
         </div>
       </div>
 
@@ -790,6 +790,16 @@
     ></a>
 
     <div id="preloader"></div>
+    <button class="service-btn" onclick="scrollToContact()">Contact Us</button>
+
+<script>
+  function scrollToContact() {
+    document.querySelector("#contact").scrollIntoView({
+      behavior: "smooth"
+    });
+  }
+</script>
+
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="vendor/php-email-form/validate.js"></script>
     <script src="vendor/aos/aos.js"></script>
