--- a/index.html
+++ b/index.html
@@ -478,6 +478,16 @@
           <a href="#contact" class="service-btn">Contact Us</a>
         </div>
       </div>
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="700">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-tools"></i>
+        </div>
+        <div>
+          <h4 class="title"><a href="#services">Computer Repairs</a></h4>
+          <p class="description">Professional troubleshooting, maintenance, and repair for laptops and desktops.</p>
+          <a href="#contact" class="service-btn">Contact Us</a>
+        </div>
+      </div>
 
       <!-- Web App Development -->
       <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
@@ -490,7 +500,17 @@
           <a href="#contact" class="service-btn">Contact Us</a>
         </div>
       </div>
-
+       <!-- IT Consulting -->
+      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
+        <div class="icon flex-shrink-0">
+          <i class="bi bi-laptop"></i>
+        </div>
+        <div>
+          <h4 class="title"><a href="#services">IT Consulting</a></h4>
+          <p class="description">Providing expert IT consulting to optimize your technology and business processes.</p>
+          <a href="#contact" class="service-btn">Contact Us</a>
+        </div>
+      </div>
       <!-- Web Development -->
       <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
         <div class="icon flex-shrink-0">
