--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
       </div>
 
     </div>
-      </div>
+  </div>
       </section>
 
       <!--/service Section-->
@@ -800,15 +800,23 @@
           </p>
         </div>
     </footer>
+    <a
+      href="#"
+      id="scroll-top"
+      class="scroll-top d-flex align-items-center justify-content-center"
+      ><i class="bi bi-arrow-up-short"></i
+    ></a>
 
     <div id="preloader"></div>
-    <script>
+
+<script>
   function scrollToContact() {
     document.querySelector("#contact").scrollIntoView({
       behavior: "smooth"
     });
   }
-    </script>
+</script>
+
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="vendor/php-email-form/validate.js"></script>
     <script src="vendor/aos/aos.js"></script>
