--- a/index.html
+++ b/index.html
@@ -372,9 +372,7 @@
                 <h4>Joel Bukoma</h4>
                 <p>
                   <em
-                    >Innovative and deadline-driven Web developer and Graphic Designer with experience designing and developing user-centered
-                    digital/print marketing material from initial concept to
-                    final, polished deliverable.</em
+                    >Results-driven Web Developer and IT Consultant with hands-on experience delivering innovative digital solutions, including responsive websites, scalable web applications, and e-commerce platforms. Skilled in UI/UX design, graphic design, and front-to-backend development, with a strong focus on creating seamless user experiences. Adept at providing IT consulting services to help businesses optimize technology and processes, as well as offering computer repair and maintenance solutions to ensure reliable system performance. Passionate about leveraging creativity and technical expertise to support clients in achieving their business and digital transformation goals.</em
                   >
                 </p>
                 <ul>
