--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="container section-title" data-aos="fade-up">
           <h2>About</h2>
           <p>
-            A passionate UI/UX designer and web developer with a knack for creating
+            A passionate Computer Science with a knack for creating
             user-friendly digital experiences.<br />
             I specialize in designing and developing responsive websites that not only look great but also provide a seamless user experience.
           </p>
@@ -139,7 +139,7 @@
               />
             </div>
             <div class="col-lg-8 content">
-              <h2>UI/UX Designer &amp; Web Developer.</h2>
+              <h2>IT Consultant &amp; Web Developer.</h2>
               <p class="fst-italic py-3">
                 I create user-centered designs that are not only visually appealing but also functional and easy to use.
               </p>
@@ -186,7 +186,7 @@
                 </div>
               </div>
               <p class="py-3">
-                With a strong foundation in HTML, CSS, JavaScript, PHP, and WordPress, I bring ideas to life through code. My goal is to deliver high-quality websites that meet client objectives and exceed user expectations.
+                With a strong foundation in HTML, CSS, JavaScript,Photoshop, and more to come. I bring ideas to life through code. My goal is to deliver high-quality websites that meet client objectives and exceed user expectations.
               </p>
             </div>
           </div>
@@ -405,7 +405,7 @@
               <div class="resume-item">
                 <h4>Graphic Designer</h4>
                 <h5>2023 - 2024</h5>
-                <p><em>JB DESIGNS UG, Kampala, UGANDA</em></p>
+                <p><em>Freelance</em></p>
                 <ul>
                   <li>
                     Developed numerous marketing programs (logos,
