--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>JavaScript</span> <i class="val">65%</i></span>
+              <span class="skill"><span>Adobe Suite</span> <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -438,6 +438,7 @@
               <a href="#contact" class="service-btn">Contact Us</a>
             </div>
           </div>
+          <!-- End Service Item -->
 
         </div>
       </div>
