--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2>Joel Bukoma</h2>
         <p>
           I'm
-          <span class="typed" data-typed-items=", Developer">Web Developer</span><span
+          <span class="typed" data-typed-items="Creator Developer">Web Developer</span><span
             class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span
             class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
         </p>
