Add Google AdSense meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
   <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
   <link href="css/main.css" rel="stylesheet" />
+  <meta name="google-adsense-account" content="ca-pub-5367368980035128">
 </head>
 
 <body class="index-page">
